better wording for likes

--- a/app/views/graph/profile.html.erb
+++ b/app/views/graph/profile.html.erb
@@ -30,7 +30,7 @@
   </div>
 
   <br><br>
-  <h3>Check things that you have the most appreciation for</h3>
+  <h3>Check 5 things that you have the most appreciation for:</h3>
   <br>
   <div class="field profile_checkboxes">
     <div class="field">
