--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -11,11 +11,9 @@
     </div>
   <% end %>
 
-  <div class="ui-widget">
-    <div class="field">
-      <%= f.label :email %><br />
-      <%= f.text_field :email %>
-    </div>
+  <div class="field">
+    <%= f.label :email, "MIT.edu Email:" %><br />
+    <%= f.text_field :email %>
   </div>
   <div class="field">
     <%= f.label :password %><br />
@@ -39,17 +37,3 @@
     <%= f.submit %>
   </div>
 <% end %>
-<script>
-$(function() {
-  $( "#user_email" ).autocomplete({
-    source: "http://stark-hamlet-8685.herokuapp.com/userpull",
-    minLength: 2,
-      source: function( request, response ) {
-        var term = request.term;
-        $.getJSON( "http://stark-hamlet-8685.herokuapp.com/userpull", request, function( data, status, xhr ) {
-          response( data );
-        });
-      }
-  });
-});
-</script>
