--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,2 +1,6 @@
-<img src="http://placekitten.com/g/960/400" alt="cat">
-<h1>You are awesome!</h1>
+<div id="bigquote">
+What if your<br>
+new best friend<br>
+was just<br>
+one friend away?<br>
+</div>
