--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -66,12 +66,12 @@ footer {
 }
 
 #bigquote {
-	width: 100%;
 	font-family: Times New Roman, serif;
 	font-style: italic;
 	font-size: 48px;
 	line-height: 120%;
 	color: #white;
 	background-color: #3cfd8d;
-	padding: 30px;
+	padding: 40px 30px 30px 320px;
+	height: 400px;
 }
