--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -4,3 +4,21 @@ new best friend<br>
 was just<br>
 one friend away?<br>
 </div>
+<div class="triplet_container">
+	<div class="triplet">
+		<h3>Become a part of the graph.</h3>
+		<p>Create an account and tell the graph who you are and what you appreciate.
+			No pictures = no stalking, the graph loves everyone.</p>
+	</div>
+	<div class="triplet">
+		<h3>Explore the graph.</h3>
+		<p>The graph is a map of the social world surrounding you.  Click to jump from person to person and see how small the world really is.</p>
+	</div>
+	<div class="triplet">
+		<h3>Use the graph.</h3>
+		<p>Bigger nodes = people you share common interests with.  The graph shows you how you connect so you know who should introduce you.</p>
+	</div>
+</div>
+<div class="guide">
+Guide to the Graph.
+</div>
