--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -69,9 +69,34 @@ footer {
 	font-family: 'Bitter', serif;
 	font-size: 48px;
 	line-height: 120%;
-	color: #white;
+	color: #333;
 	background-color: #FF9;
 	padding: 30px 30px 40px 280px;
 	text-shadow: 2px 3px 4px rgba(0,0,0,0.2);
 	border-bottom: 2px solid #333;
+}
+
+#bigquote:hover {
+	text-shadow: 3px 5px 5px rgba(0,0,0,0.3);
+}
+
+.triplet_container {
+	overflow: hidden; /* Clearfix! */
+    zoom: 1;  /* Triggering "hasLayout" in IE */
+}
+
+.triplet {
+	float: left;
+	width: 300px;
+	margin-left: 10px;
+	margin-right: 10px;
+}
+
+.guide {
+	font-family: 'Bitter', serif;
+	font-size: 36px;
+	text-align: center;
+	line-height: 120%;
+	padding: 30px;
+	text-shadow: 2px 3px 4px rgba(0,0,0,0.2);
 }
