--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -6,7 +6,7 @@ one friend away?<br>
 </div>
 <div class="triplet_container">
 	<div class="triplet">
-		<h3>Become a part of the graph.</h3>
+		<h3>Join the graph.</h3>
 		<p>Create an account and tell the graph who you are and what you appreciate.
 			No pictures = no stalking, the graph loves everyone.</p>
 	</div>
@@ -20,5 +20,5 @@ one friend away?<br>
 	</div>
 </div>
 <div class="guide">
-Guide to the Graph.
+Your guide to the graph
 </div>
