--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -19,6 +19,23 @@ one friend away?<br>
 		<p>Bigger nodes = people you share common interests with.  The graph shows you how you connect so you know who should introduce you.</p>
 	</div>
 </div>
-<div class="guide">
+<div class="guide_header">
 Your guide to the graph
 </div>
+<div class="twin_container">
+	<div class="twin">
+		<h3>Key knowledge:</h3>
+		<p>This is a "social graph" in which people are nodes and lines represent connections between them.
+			The size of a nade corresponds to how many things you share a common appreciation for. 
+		</p>
+		<h3>Questions:</h3>
+		<p>Why don't you connect to Facebook?</p>
+	</div>
+	<div class="twin">
+		<h3>Interactions:</h3>
+		<p>This is a "social graph" in which people are nodes and lines represent connections between them.
+			The size of a nade corresponds to how many things you share a common appreciation for. 
+		</p>
+	</div>
+</div>
+
