--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -8,7 +8,7 @@ one friend away?<br>
 	<div class="triplet">
 		<h3>Join the graph.</h3>
 		<p>Create an account and tell the graph who you are and what you appreciate.
-			No pictures = no stalking, the graph loves everyone.</p>
+			No pictures, nothing creepy, the graph loves everyone.</p>
 	</div>
 	<div class="triplet">
 		<h3>Explore the graph.</h3>
@@ -19,6 +19,7 @@ one friend away?<br>
 		<p>Bigger nodes = people you share common interests with.  The graph shows you how you connect so you know who should introduce you.</p>
 	</div>
 </div>
+<div class="hr"></div>
 <div class="guide_header">
 Your guide to the graph
 </div>
