--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -19,7 +19,6 @@ one friend away?<br>
 		<p>Bigger nodes = people you share common interests with.  The graph shows you how you connect so you know who should introduce you.</p>
 	</div>
 </div>
-<div class="hr"></div>
 <div class="guide_header">
 Your guide to the graph
 </div>
@@ -29,8 +28,19 @@ Your guide to the graph
 		<p>This is a "social graph" in which people are nodes and lines represent connections between them.
 			The size of a nade corresponds to how many things you share a common appreciation for. 
 		</p>
+		<br>
+		<br>
 		<h3>Questions:</h3>
 		<p>Why don't you connect to Facebook?</p>
+		<p>On Facebook you have a lot of friends, probably hundreds.  For the 6 Away graph we wanted to keep
+			connections few and personal.  If you can't think of them off the top of your head don't worry about
+			included them.  Connections should average around 20 people.</p>
+		<br>
+		<p>What's the story?</p>
+		<p>There are lots of opportunities to meet people, but you don't stay friends with most of people you meet.
+		   We believe the the secret to meeting a friend who you can stay friends with is connections.  A friend of a
+		   friend is likely to live near you and be someone you have a high probabilty of seeing again - because your
+		   friends already do.  6 Away helps this happen.</p>
 	</div>
 	<div class="twin">
 		<h3>Interactions:</h3>
