--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -31,12 +31,12 @@ Your guide to the graph
 		<br>
 		<br>
 		<h3>Questions:</h3>
-		<p>Why don't you connect to Facebook?</p>
+		<h5>Why don't you connect to Facebook?</h5>
 		<p>On Facebook you have a lot of friends, probably hundreds.  For the 6 Away graph we wanted to keep
 			connections few and personal.  If you can't think of them off the top of your head don't worry about
 			included them.  Connections should average around 20 people.</p>
 		<br>
-		<p>What's the story?</p>
+		<h5>What's the story?</h5>
 		<p>There are lots of opportunities to meet people, but you don't stay friends with most of people you meet.
 		   We believe the the secret to meeting a friend who you can stay friends with is connections.  A friend of a
 		   friend is likely to live near you and be someone you have a high probabilty of seeing again - because your
