--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -7,8 +7,8 @@ one friend away?<br>
 <div class="triplet_container">
 	<div class="triplet">
 		<h3>Join the graph.</h3>
-		<p>Create an account and tell the graph who you are and what you appreciate.
-			No pictures, nothing creepy, the graph loves everyone.</p>
+		<p>Create an account and tell the graph who you are.
+			No pictures, nothing creepy, and the graph only includes MIT people.</p>
 	</div>
 	<div class="triplet">
 		<h3>Explore the graph.</h3>
@@ -24,31 +24,34 @@ Your guide to the graph
 </div>
 <div class="twin_container">
 	<div class="twin">
-		<h3>Key knowledge:</h3>
-		<p>This is a "social graph" in which people are nodes and lines represent connections between them.
-			The size of a node corresponds to how many things you share a common appreciation for. 
+		<h3>Core idea:</h3>
+		<p>6 Away is a visualization of your "social graph" &#8212; how people are connected.
 		</p>
 		<br>
 		<br>
 		<h3>Questions:</h3>
 		<h5>Why don't you connect to Facebook?</h5>
 		<p>On Facebook you have a lot of friends, probably hundreds.  For the 6 Away graph we wanted to keep
-			connections few and personal.  If you can't think of them off the top of your head don't worry about
-			including them.  You will probably only have 20 connections.</p>
+			connections few and personal.  If you can't think of someone off the top of your head don't worry about
+			including them.  You will probably have only 20 connections.</p>
 		<br>
 		<h5>What's the story?</h5>
-		<p>There are lots of opportunities to meet people, but you don't stay friends with most of people you meet.
-		   We believe the the secret to meeting a friend who you can stay friends with is connections.  A friend of a
-		   friend is likely to live near you and be someone you have a high probabilty of seeing again - because your
-		   friends already do.<br>6 Away helps this happen.</p>
+		<p>There are lot's of opportunities to meet people, but you don't stay friends with most of people you meet.
+		   We believe the the secret to meeting a friend who you can stay friends with is proximity.  A friend of a
+		   friend is likely to live near you and be someone you have a high probabilty of seeing again &#8212; because your
+		   friends already do.<br>6 Away helps you meet these people.</p>
+		<br>
 		<h5>Additional Questions?</h5>
 		<p>Email us at sixawayapp@gmail.com</p>
 	</div>
 	<div class="twin">
 		<h3>Interactions:</h3>
 		<p>Click on nodes to expand them and explore the graph.</p>
-		<h5>Making new connections<h5>
-		<p>Click on one of your orange categories to expand it.  You can then enter the name of the person you want to connect to.</p>
+		<br>
+		<h5>Making new connections</h5>
+		<p>Click on one of your orange categories to expand it.  You can then enter the name of the person you want to connect to.
+			The more connections you make the more likely you are to find a friend!</p>
+		<br>
 		<h5>So... what should I see in the graph?</h5>
 		<p>Larger nodes are people who you are similar to you.  If you see a friend of a friend with a large node, maybe you should meet them!  We aren't going to tell you how you should, maybe it is going to watch a movie together with your mutual friend or just remembering the name &#8212; it's up to you!</p>
 	</div>
