--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -19,6 +19,7 @@ one friend away?<br>
 		<p>Bigger nodes = people you share common interests with.  The graph shows you how you connect so you know who should introduce you.</p>
 	</div>
 </div>
+<a name="instructions"></a> 
 <div class="guide_header">
 Your guide to the graph
 </div>
