--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 <h1 id="logo"><%= link_to "6 Away", root_url %></h1>
 <div id="nav">
 	<% if current_user %>
-		<%= link_to "Instructions", root_url, :class => "highlight_instructions", :anchor => "instructions" %>&nbsp;|&nbsp;
+		<%= link_to "Instructions", "#{root_url}#instructions" %>&nbsp;|&nbsp;
 		<%= link_to "My Graph", :graph %>&nbsp;|&nbsp;
 		<%= link_to "Edit Profile - #{current_user.email}", :profile %>&nbsp;|&nbsp;
 		<%= link_to "Logout", :logout %>
