--- a/app/views/graph/profile.html.erb
+++ b/app/views/graph/profile.html.erb
@@ -64,6 +64,14 @@
 
   </div>
   <br>
+  <br>
+  <h3>Instructions for after you submit:</h3>
+  <p>Click on nodes to expand them.  To add a connection, click on a category and then add their name.</p>
+  <br>
+  <p>Have fun exploring!</p>
+  <br>
+  <br>
+
   <div class="actions">
     <%= submit_tag("Submit") %>
   </div>
