--- a/app/views/graph/profile.html.erb
+++ b/app/views/graph/profile.html.erb
@@ -66,7 +66,7 @@
   <br>
   <br>
   <h3>Instructions for after you submit:</h3>
-  <p>Click on nodes to expand them.  To add a connection, click on a category and then add their name.</p>
+  <p>Click on nodes to expand them.  To add a connection, click on a category and then add their name.  The size of a node corresponds to how similar someone is to you.</p>
   <br>
   <p>Have fun exploring!</p>
   <br>
