--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= f.label :email, "MIT.edu Email:" %><br />
-    <%= f.text_field :email, nil, placeholder: "athena@mit.edu" %>
+    <%= f.text_field :email %>
   </div>
   <div class="field">
     <%= f.label :password %><br />
